data/derived/sp14/progs/unify/prog3472.ml.out
Characters 54-57:
  wwhile (f 3, 2);;
          ^^^
Error: This expression has type int * bool
       but an expression was expected of type 'a -> 'a * bool
